+ galerei, aktualizacii, +hom

--- a/Zarinsk.mw
+++ b/Zarinsk.mw
@@ -1,24 +1,25 @@
 {{Eländpunkt
  | Nimi = Zarinsk<br />Заринск
- | Lidnanznam = Zarinsk coat of arms.png
+ | Lidnanznam = Zarinsk coat of arms.svg
  | Flag = 
  | Lidnanznam text = Zarinskan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 46,597
- | Voz' = 2018
+ | Eläjiden lugu = 45,405
+ | Voz' = 2021
  | Pind = 79.16
  | Fail = Второй микрорайон - panoramio.jpg
- | Pämez' = Ivan Teröškin <br />(kül'mku 2017—)
+ | Pämez' = Viktor Azgaldän<br />(tal'vku 2019—)
  | Telefonkod = +7-38595-xx-xxx
  | Avtokod = 22
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-[[Fail:Вознесенская церковь в Заринске.jpg|thumb|left|250px|Sündun Voznesenjan jumalanpert' (saudihe vll 1991−2005)]]
 '''Zarinsk''' ({{lang-ru|Заринск}}) om [[Venäma]]n lidn da lidnümbrik [[Altajan rand]]an pohjoižpäivnouzmas. Se om [[Zarinskan rajon]]an administrativižeks keskuseks mugažo, ei mülü sihe.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1979 lidnan statusanke kahtes eländpunktaspäi: ''Zarinskii''-žilo (sen aluz oli pandud vl 1953) da ''Sorokino''-külä (oli tetab vspäi 1748). Lidn šingotase koksanhimižel tegimel, mugažo meckombinat (pilindmaterialad), lihategim i leibän edheotand ratas, nahktegim om sauvomas.
+Eländpunktan aluz om pandud vl 1979 lidnan statusanke kahtes eländpunktaspäi: ''Zarinskii''-žilo (sen aluz oli pandud vl 1953) da ''Sorokino''-külä (oli tetab vspäi 1748).
+
+Zarinsk šingotase koksanhimižel tegimel, mugažo meckombinat (pilindmaterialad), lihategim i leibän edheotand ratas, nahktegim om sauvomas.
 
 == Geografijan andmused ==
 Lidn sijadase [[Čumiš|Čumiš-jogen]] ([[Obinjogi|Obin]] oiged ližajogi) molembil randoil, 180 m ü.m.t. keskmäižel korktusel. Matkad [[Barnaul]]hasai om 100 km suvipäivlaskmha raudtedme vai avtotedme. ''Zarinskai''-raudtestancii ({{lang-ru|Заринская}}) om [[Barnaul]] — [[Novokuzneck]] raudtel. Lähembaine lidn om [[Salair]] (Kemerovon agj) 82 km pohjoižpäivnouzmha orhal vai 150 km avtotedme.
@@ -26,9 +27,25 @@ Lidn sijadase [[Čumiš|Čumiš-jogen]] ([[Obinjogi|Obin]] oiged ližajogi) mole
 Zarinsk om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 48 461 ristitud. Kaikiš suremb ristitišt oli 52 300 eläjad vl 1996. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] nell' jumalanpertid om olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 48 461 ristitud. Kaikiš suremb ristitišt oli 52 300 eläjad vl 1996.
 
-Zarinskan politehnine tehnikum om professionaližen opendusen aluzkundaks.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] nell' jumalanpertid om olmas lidnas.
+
+Zarinskan politehnine tehnikum<ref>[http://zpt.edu22.info/ Zarinskan politehnižen tehnikuman sait (''zpt.edu22.info'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+Edeline lidnan pämez' om Ivan Teröškin (kül'mku 2017 — heinku 2019).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Центр города.jpg|Torguindkeskuz lidnan keskuzpalas vl 2010
+Вознесенская церковь в Заринске.jpg|Sündun Voznesenjan jumalanpert', vn 2010 nägu (saudihe vll 1991−2005)
+Алтай-Кокс с 88 километра, 2020.GGE9W.jpeg|«Altai-Koks» vl 2020, nägu ''88. km''-raudteplatformaspäi lidnas
+Дом культуры Металлург.jpg|«Metallurg»-kul'turkeskuz (2010)
+Стела на въезде в Заринск.jpg|Znam lidnan röunal (2018)
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://admzarinsk.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''admzarinsk.ru'').] {{ref-ru}}
