+ galerei, + hom, aktualizacii

--- a/Slavgorod_(Venäma).mw
+++ b/Slavgorod_(Venäma).mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Slavgorodan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 29,916
- | Voz' = 2018
+ | Eläjiden lugu = 28,757
+ | Voz' = 2021
  | Pind = 53.32
- | Fail = Славгород жд вокзал.jpg
- | Pämez' = Vladimir Tatijevskii<br />(tal'vku 2017—)<br />''(velgusentäutai)''
+ | Fail = Сл
+ | Pämez' = Lüdmila Podgora<br />(kezaku 2020—)
  | Telefonkod = +7-38568-xx-xxx
  | Avtokod = 22
  | Aigvö = [[UTC]]+7 (MSK+4)
@@ -20,7 +20,9 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1910. Se sai lidnan statusad vl 1914. [[Transsib]]an raudtesarak tuli lidnha vl 1917.
 
-Vspäi 2012 ühtištuihe Slavgorodad da sen rajonad lidnümbrikho. Lidn šingotase radiotegimel, maidkombinatal, tagondpressmašiništon tegimel.
+Vspäi 2012 ühtištuihe Slavgorodad da sen rajonad lidnümbrikho.
+
+Slavgorod šingotase radiotegimel, maidkombinatal, tagondpressmašiništon tegimel.
 
 == Geografijan andmused ==
 Lidn sijadase Sikači- da Sur' Jarovoje-järviden keskes, Kulundan stepin keskuses, 115 m ü.m.t. keskmäižel korktusel. Matkad [[Barnaul]]hasai om 394 km päivnouzmha raudtedme, [[Kazahstan]]an röunhasai — 20 km suvipäivlaskmha. Lähembaine lidn om [[Jarovoje]] 10 km suvipäivlaskmha avtotedme.
@@ -28,9 +30,20 @@ Lidn sijadase Sikači- da Sur' Jarovoje-järviden keskes, Kulundan stepin keskus
 Kaik 23 žilod mülüdas lidnümbrikho Slavgorodan ližaks, sidä kesken Slavgorodskoje-žilo (3 557 rist. vl 2013) ani pohjoižhe lidnaspäi. Lidnümbrikon pind — 2 137 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 32 389 ristitud, rajonan — 10 186 ristitud. Kaikiš suremb lidnan ristitišt oli 38 413 eläjad vl 1959 i 33..35 tuh. eläjid vll 1989−2008. Vl 2018 kaik 40 048 ristitud elädas lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 32 389 ristitud, rajonan — 10 186 ristitud. Kaikiš suremb lidnan ristitišt oli 38 413 eläjad vl 1959 i 33..35 tuh. eläjid vll 1989−2008. Vl 2018 kaik 29 916 ristitud elihe lidnas i 40 048 ristitud kaikes lidnümbrikos.
 
-Ortodoksižen hristanuskondan kaks' jumalanpertid i katoline pühäpert' oma olmas lidnas, islaman pühäpert' om sauvomas.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' jumalanpertid<ref>[http://sobory.ru/geo/locat/17084 Slavgorodan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> i [[katoline jumalankodikund|katoline]] pühäpert' oma olmas lidnas, [[islam]]an pühäpert' om sauvomas.
+
+Professionaližen opendusen aluzkundad oma agrarine tehnikum<ref>[http://sagrar.ru/ Slavgorodan agrarižen tehnikuman sait (''sagrar.ru'').] {{ref-ru}}</ref> i pedagogine kolledž<ref>[http://mysttc.ru/ Slavgorodan pedagogižen kolledžan sait (''mysttc.ru'').] {{ref-ru}}</ref>.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+База крайпотребсоюза.jpg|Randan potrebsojuz:an baz (2016)
+Храм в честь святителя Николая архиепископа Мир Ликийских чудотворца.jpg|Ph. Mikulai-čudonsädajan kafedraline päjumalanpert' (ortodoksine hristanuskond), vn 2019 nägu (om saudud vll 1978−1979)
+Заводоуправление КПО.jpg|Tagondpressmašiništon tegimen kontor vl 2016
+Улица К. Маркса, 167, Славгород, Алтайский край.jpg|Lidnan kul'turkeskuz (2016)
+Славгород жд вокзал.jpg|Slavgorod-päraudtestancijan sauvuz vl 2012
+</gallery>
 
 == Homaičendad ==
 <references/>
