--- a/Slavgorod_(Venäma).mw
+++ b/Slavgorod_(Venäma).mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 28,757
  | Voz' = 2021
  | Pind = 53.32
- | Fail = Сл
+ | Fail = Славгород, братские могилы.jpg
  | Pämez' = Lüdmila Podgora<br />(kezaku 2020—)
  | Telefonkod = +7-38568-xx-xxx
  | Avtokod = 22
