--- a/Rammstein.mw
+++ b/Rammstein.mw
@@ -35,6 +35,7 @@
 * 2009 — ''[[Liebe ist für alle da (al'bom)|Liebe ist für alle da]]''
 * 2011 — ''[[Made In Germany 1995−2011]]'' (Om tehtud Saksanmas 1995−2011)
 * 2019 — ''[[Rammstein (al'bom)|Rammstein]]''
+* 2022 — ''Zeit''
 
 === DVD-pästandad ===
 * 1998 — ''Live aus Berlin''
