--- a/Rammstein.mw
+++ b/Rammstein.mw
@@ -1,9 +1,9 @@
 {{Muzikgrupp
- | Nimi = Rammsteim
+ | Nimi = Rammstein
  | Logo = Rammstein logos joined.svg
  | Foto = Rammstein-flamethrowers.jpg
  | Žanrad = [[indastrialmetal]], [[Neue Deutsche Härte]]
- | Voded = 1994–
+ | Voded = 1994—
  | Valdkund = Saksanma
  | Lidn = Berlin
  | Kel' = [[saksan kel']]
@@ -12,35 +12,41 @@
  | Eksühtnijad = 
  | Sait = http://rammstein.de/
 }}
-'''«Rammstein»''' [Rammštain] om [[Saksanma|germanijalaine]] rokgrupp. Edestab muzikad [[indastrialmetal]] i [[Neue Deutsche Härte]]-stiliš saksan kelel päpaloin. Gruppan aluz om pandud [[Berlin]]ha vl 1994.
+'''«Rammstein»''' [Rammštain] om [[Saksanma|germanijalaine]] rokgrupp. Edestab muzikad [[indastrialmetal]] i [[Neue Deutsche Härte]]-stiliš saksan kelel päpaloin.
+
+Gruppan aluz om pandud [[Berlin]]ha vl 1994, mülükund om kaikenaigaine sil aigalpäi. Vodele 2018 grupp möi al'bomoiden 20 mln kopijoid.
 
 == Mülükund ==
 * [[Kruspe Rihard|Rihard Kruspe]] (''Richard Z. Kruspe'')
 * [[Landers Paul'|Paul' Landers]] (''Paul H. Landers'')
 * [[Lindemann Till'|Till' Lindemann]] (''Till Lindemann'')
-* [[Ridel' Oliver|Oliver Ridel']] (''Oliver "Ollie" Riedel'')
-* [[Šnaider Kristof|Kristof Šnaider]] (''Christoph "Doom" Schneider'')
-* [[Lorenc Kristian|Kristian Lorenc]] (''Christian "Flake" Lorenz'')
+* [[Ridel' Oliver|Oliver Ridel']] (''Oliver «Ollie» Riedel'')
+* [[Šnaider Kristof|Kristof Šnaider]] (''Christoph «Doom» Schneider'')
+* [[Lorenc Kristian|Kristian Lorenc]] (''Christian «Flake» Lorenz'')
 
 == Diskografii ==
 === Al'bomad ===
+;Studižed al'bomad
 * 1995 — ''[[Herzeleid (al'bom)|Herzeleid]]'' (Südäikeran mokičendad)
 * 1997 — ''[[Sehnsucht (al'bom)|Sehnsucht]]'' (Tusk)
-* 1998 — ''[[Live aus Berlin]]'' (Eläbalaz Berlinaspäi)
 * 2001 — ''[[Mutter (al'bom)|Mutter]]'' (Mam)
-* 2004 — ''[[Lichtspielhaus]]''
 * 2004 — ''[[Reise, Reise (al'bom)|Reise, Reise]]'' (Libu ka anda)
-* 2005 — ''[[Rosenrot]]''
-* 2006 — ''[[Völkerball]]''
-* 2009 — ''[[Liebe ist für alle da (al'bom)|Liebe ist für alle da]]''
-* 2011 — ''[[Made In Germany 1995−2011]]'' (Om tehtud Saksanmas 1995−2011)
+* 2005 — ''[[Rosenrot]]'' (Rozaine)
+* 2009 — ''[[Liebe ist für alle da (al'bom)|Liebe ist für alle da]]'' (Armastuz kaikiden täht)
 * 2019 — ''[[Rammstein (al'bom)|Rammstein]]''
-* 2022 — ''Zeit''
+* 2022 — ''Zeit'' (Aig)
 
-=== DVD-pästandad ===
-* 1998 — ''Live aus Berlin''
-* 2004 — ''Lichtspielhaus''
-* 2006 — ''Völkerball''
+;Koncertal'bomad (DVD)
+* 1998 — ''[[Live aus Berlin]]'' (Eläbalaz Berlinaspäi)
+* 2004 — ''[[Lichtspielhaus]]'' (Kinoteatr)
+* 2006 — ''[[Völkerball]]'' (Plongaidajad)
+* 2012 — ''Videos 1995−2012'' (Videod 1995−2012)
+* 2015 — ''Rammstein in Amerika'' (Rammstein Amerikas)
+* 2017 — ''Rammstein: Paris'' (Rammstein: Pariž)
+
+;Kogodused
+* 2011 — ''[[Made In Germany 1995−2011]]'' (Om tehtud Saksanmas 1995−2011)
+* 2015 — ''XXI'' (''vinilplatoiden komplekt'')
 
 === Turned ===
 * Herzeleid Tur — 1994–1996
