--- a/Söm.mw
+++ b/Söm.mw
@@ -2,11 +2,12 @@
 [[Fail:Foods.jpg|thumb|right|250px|Erazvuiččed sömäd]]
 '''Söm''' om kaik, mi sättub [[sönd]]ale i [[jond]]ale [[živatad|eläjiden organizmoiden]] täht.
 
+[[Kulinarii]] om sömän vaumičendan (slokostindan) tedo. [[Sömtegimišt]] pästab söndtavaroid [[maižanduz|maižandusen]] da erasiden toižiden sarakoiden pol'fabrikatoišpäi. Istorižikš [[mectuz]] da poimind oliba sömän samižen päižikš purtkikš, ned processad oma kaičenus tähäsai külälaižil, erasiden igähižiden rahvahiden elon aluz.
+
+== Mülünd i toižendad ==
 Otandan südäimehe process om sömine, sen jäl'ghe sömänsulatand zavodiše. ''[[Söte]]'' kävutase kodikoittud živatoiden sömižen täht. Söm om tarbhaine täutmaha hibjan energijan varoid i [[metabolizm]]an himižiden reakcijoiden täht. Mülütab nenid substancijoid: [[vauktušad]], [[razvad]], [[hil'vezikod]], [[vitaminad]], [[mineralad]] i [[mikroelementad]]. Hibj kazvab, kändase täuz'kaznudeks da eläb toižen [[ontogenez]]an kal't.
 
 Jagadas sömid augotižlibundan mödhe: [[kazmused|kazmusišpäi]] i [[živatad|živatoišpäi]]. Ku söm kogoneb produktoišpäi vaiše ühtenke augotižlibundanke, ka nimitadas sidä [[diet]]aks: [[vegetarižuz]], lihadiet, maiddiet da toižed. Ičeze [[energine arvuz]] om sömän kaikuččel toižendal.
-
-[[Kulinarii]] om sömän vaumičendan (slokostindan) tedo. [[Sömtegimišt]] pästab söndtavaroid [[maižanduz|maižandusen]] da erasiden toižiden sarakoiden pol'fabrikatoišpäi. Istorižikš [[mectuz]] da poimind oliba sömän samižen päižikš purtkikš, ned processad oma kaičenus tähäsai külälaižil, erasiden igähižiden rahvahiden elon aluz.
 
 Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid, fizižid redustoitajid substancijoid, kucujid läžundoid mikroorganizmoid (bakterijad, parazitad, virusad). Joga sömäl kožundan strok om olmas.
 
@@ -29,6 +30,8 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 == Homaičendad ==
 <references />
 
+== Irdkosketused ==
+* [http://knk.karelia.ru/2019/12/som-mehen-kandiseb-eda-cheloveka-nosit.html «Söm mehen kandišeb»-fil'm vepsän keitandas, 2019, ''knk.karelia.ru''-saital. ''(13 min 38 s hätkte)''] {{ref-vep}} <small>''(+ venäkel'žed subtitrad)''</small>
 {{Commons|Food}}
 
 {{stub}}
