--- a/Leib.mw
+++ b/Leib.mw
@@ -16,15 +16,16 @@ Leib om mugoi produkt, kudamban tahtaz mülütab [[jauh]]od i [[vezi|vet]] minim
 * ''Valik'' — rugižleib, mustleib.
 * ''Vasleib'' — leib vaumičemha vasad.
 
-== Leibhä sidotud vepsän tärtused ==
+== Leibhä sidodud vepsän tärtused ==
 * ''Kezakeskust'' — leibätoi aigkeskust, konz edeližen satusen leib lopiše.
 * ''Korišk'' — kuiv leibän supalaine.
 * ''Kromaine'' — leibän päluine.
 * ''Teplikpada'' — astii peksmaha da seižutamha nižutahtast.
 
-== Leibhä sidotud vepsän muštatišed ==
+== Leibhä sidodud vepsän muštatišed ==
 <blockquote>
 * ''Eci, kut leibäd ecid, siloi löudad.''
+* ''Kodihine kromaine om kal'hemb edahašt plotud.''
 * ''Leib da vezi — saldatan söm.''
 * ''Mez' ei elä vaiše ühtel leibäl.''
 * ''Rahad da leib vellesed oma.''
