--- a/Heimolaižuz.mw
+++ b/Heimolaižuz.mw
@@ -103,6 +103,14 @@
 * [[Poigindam]] — ižindaman akan vai emindaman mužikan poig
 * [[Tütrindam]] — ižindaman akan vai emindaman mužikan tütär
 
+== Heimolaižihe sidodud vepsän muštatišed ==
+<blockquote>
+* ''Haugenpä — bobulin loun, ahvenanpä — anopen loun.''
+* ''Heimod om äi, söda ei kus.''
+* ''Ku mam om koirakaz, ka i tütar om hond.''
+* ''Pohjoižtulleiš eile lämäd, emindamas eile mamad.''
+</blockquote>
+
 [[Kategorii:Kanz]]
 [[Kategorii:Heimolaižiden kesksidod]]
 [[Kategorii:Vepsän kul'tur]]
