/* Živatha sidotud vepsän muštatiž */ +

--- a/Živatad.mw
+++ b/Živatad.mw
@@ -27,8 +27,9 @@ Ezmäižed živatad sünduiba 500 mln («[[kembrii|kembrine]] poukahtuz») ... 1
 * Živatoiden toižendoiden igän hätkeližuz om erazvuitte lujas. Erased gavedid elädas päivest, ''Savalia savaglia''-[[korallad|koralloiden]] kolonii eläb 2700 vodhesai.
 * [[Gormonad]] sädasoiš eriližiš organoiš (kazmusil — jogahižes stajas).
 
-== Živatha sidotud vepsän muštatiž ==
+== Živatha sidodud vepsän muštatišed ==
 <blockquote>
+* ''Aidatomha pöudho kaikutne živat tuleb.''
 * ''Ristit koleb, a živat kadob.''
 </blockquote>
 
