--- a/Mez'.mw
+++ b/Mez'.mw
@@ -16,6 +16,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
 * ''Kala ecib süvemban, a mez' paremban.''
 * ''Mez' söb, mez' sab, mehele andab Jumal.''
+* ''Mitte aig, mugoi i mez'.''
 * ''Söm mehen kandišeb.''
 </blockquote>
 
