--- a/Sä.mw
+++ b/Sä.mw
@@ -61,15 +61,16 @@ Mugoižed effektad sän arvoimižiden takaimatomas vajehtusespäi oma varuližed
 == Sän rekordad ==
 Sän rekordad oma ekstremaližed meteorologižed ozutajad, kudambid registriruihe oficialižikš Man pindal. Vn 1983 21. päiväl heinkud registriruihe kaikiš madalambad lämut sän kaclemižišpäi [[Vostok (antarktine stancii)|Vostok-stancijas]] ([[Antarktid]]): −89,2 C°. Vn 1922 13. päiväl sügüz'kud — kaikiš korktembad, Al'azizaji-sijas, [[Livii]]: +58 C° (rideltas necen znamoičendan polhe).
 
-== Sän vepsän tipad ==
+== Sän vepsän toižendad ==
 * ''Haudutez'' — veresen il'man mairiž.
 * ''Poud'' — kajoz sä.
 * ''Ränd'' — närak märg släcakaz sä.
 * ''Säpido'' — hond sä.
 * ''Upar''' — läm' neps il'm.
 
-== Sähä sidotud vepsän muštatišed ==
+== Sähä sidodud vepsän muštatišed ==
 <blockquote>
+* ''Ištu merenno, varasta säd.''
 * ''Laškale kaiken — huba sä.''
 * ''Meiden pertid sänke ei ridelkoi.''
 * ''Paha sä lebaitas ei anda.''
