--- a/Sä.mw
+++ b/Sä.mw
@@ -82,7 +82,7 @@ Sän rekordad oma ekstremaližed meteorologižed ozutajad, kudambid registriruih
 == Homaičendad ==
 <references />
 
-== Edenbaine lugemine ==
+== Edesine lugemine ==
 * [http://kodima.rkperiodika.ru/wp-content/uploads/2015/09/Kodima-9-2015.pdf Oblakov M. Sän endustusen jügedused (rahvahaližprimetindad sän polhe) // Kodima. — 2015. — #9. — Lp. 8.]
 
 {{Sä}}
