--- a/Naine.mw
+++ b/Naine.mw
@@ -8,6 +8,7 @@ Naižen alaigäčud oma [[neičukaine]] i [[neižne]].
 
 == Naižhe sidodud vepsän muštatišed ==
 <blockquote>
+* ''Ak da lehm, mužik da hebo.''
 * ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
 * ''Kana eile lind, ak eile ristit.''
 </blockquote>
