--- a/Mez'.mw
+++ b/Mez'.mw
@@ -13,6 +13,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 
 == Meheze sidodud vepsän muštatišed ==
 <blockquote>
+* ''Ak da lehm, mužik da hebo.''
 * ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
 * ''Kala ecib süvemban, a mez' paremban.''
 * ''Mez' söb, mez' sab, mehele andab Jumal.''
