/* Händikahaze sidotud vepsän muštatišed */ +

--- a/Händikaz.mw
+++ b/Händikaz.mw
@@ -33,12 +33,13 @@ Historižiš aigoiš händikahan areal oli toine pindan mödhe jäl'ges ristitun
 
 Om 6 händikahiden alaerikod Venämas: Tundran händikaz, Keskvenälaine (vai Evropalaine) mechändikas, [[Sibir'|Sibirin]] mechändikas, Step'händikaz, Kavkazan händikaz, [[Mongolii|Mongolijan]] händikaz. [[Karjalan Tazovaldkund]]as om läz 480 evropalašt händikast (''Canis lupus lupus'').
 
-== Händikahaze sidotud vepsän muštatišed ==
+== Händikahaze sidodud vepsän muštatišed ==
 <blockquote>
 * ''Ala pane händikahale sor'm suhu.''
 * ''Händikahan jaugad söttas.''
 * ''Händika(ha)späi pageni, a sid' kondi tabazi.''
 * ''Händikast kut taht söta, a üks'kaik kor'bhe kacub.''
+* ''Koza händikahanke torazi, sar'ved da kabjäd jäiba.''
 * ''Näl'ghine kuti händikaz.''
 * ''Vaiše kolnudele händikahale usko.''
 </blockquote>
