*Empty MediaWiki Message*

--- a/Söm.mw
+++ b/Söm.mw
@@ -11,7 +11,7 @@ Jagadas sömid augotižlibundan mödhe: [[kazmused|kazmusišpäi]] i [[živatad|
 
 Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid, fizižid redustoitajid substancijoid, kucujid läžundoid mikroorganizmoid (bakterijad, parazitad, virusad). Joga sömäl kožundan strok om olmas.
 
-== Sömhä sidotud vepsän muštatišed ==
+== Sömhä sidodud vepsän muštatišed ==
 <blockquote>
 * ''Andoi jumal sun, andab sömäd-ki.''
 * ''En olend sönu – emboinu, a söin da en ni sijaspäi.''
@@ -35,5 +35,4 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * [http://knk.karelia.ru/2019/12/som-mehen-kandiseb-eda-cheloveka-nosit.html «Söm mehen kandišeb»-fil'm vepsän keitandas, 2019, ''knk.karelia.ru''-saital. ''(13 min 38 s hätkte)''] {{ref-vep}} <small>''(+ venäkel'žed subtitrad)''</small>
 {{Commons|Food}}
 
-{{stub}}
 [[Kategorii:Söm| ]]
