--- a/Leib.mw
+++ b/Leib.mw
@@ -31,6 +31,7 @@ Leib om mugoi produkt, kudamban tahtaz mülütab [[jauh]]od i [[vezi|vet]] minim
 * ''Rahad da leib vellesed oma.''
 * ''Sanoišpäi leibäd ed pašta.''
 * ''Sen' eile leib, marj eile hein.''
+* ''Sö kromaine, ka linned priha čomaine.''
 * ''Tämbäi ed sö tulebid leibid.''
 * ''Verhas aitas — enamb leibäd.''
 </blockquote>
