--- a/Priha.mw
+++ b/Priha.mw
@@ -7,7 +7,12 @@
 * [[Mez']]
 * [[Prihaine]]
 * [[Neižne]]
-{{stub}}
 
+== Prihaze sidodud vepsän muštatiž ==
+<blockquote>
+* ''Sö kromaine, ka linned priha čomaine.''
+</blockquote>
+
+{{stub}}
 [[Kategorii:Mez']]
 [[Kategorii:Nor'aig]]
