--- a/Vezi.mw
+++ b/Vezi.mw
@@ -18,7 +18,7 @@ Veden ninevuz om 0,9982 g/sm³, suladandlämuz om 0 C°, kehundtemperatur om lä
 * ''Rougvezi'' — kostunu vezi kevädel.
 * ''Uhk, uhkvezi'' — lumenalaine vezi.
 
-== Vedhe sidotud vepsän muštatišed ==
+== Vedhe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Aig astub, kuti vezi jokseb.''
 * ''Heinäd alemb, vet ülemb.''
@@ -27,6 +27,7 @@ Veden ninevuz om 0,9982 g/sm³, suladandlämuz om 0 C°, kehundtemperatur om lä
 * ''Kala vedeta ei elä.''
 * ''Leib da vezi — saldatan söm.''
 * ''Palanu lämoid ei varaida, a upnu — vet.''
+* ''Tünäs vedes sured kalad kudodas.''
 * ''Vanh ak vinad job, laho pu vet vedab.''
 * ''Veden mödhe i vedehine löudase.''
 * ''Vezi karaižen löudab.''
