--- a/Kalad.mw
+++ b/Kalad.mw
@@ -36,14 +36,14 @@ Mail'mas om tetab 32 834 kalan erikod (2013, 5. eloku)<ref>Eschmeyer W.N., Fong 
 
 Zoologijan alajaguz — [[ihtiologii]] — om pühätadud kaloiden tedoidusele.
 
-== Kaloihe sidotud tärtused ==
+== Kaloihe sidodud tärtused ==
 * ''Kalavezi'' — taho, kus ujub äi kalad.
 * ''[[Maim]], maimad, maimaine'' — hen kala vai kuivatud kala.
 * ''Pisk, kalan piskud'' — nor' pen' kala.
 * ''Püšt'' — aidoitud jogen taho heredan joksmusenke, miše kalad püdamha.
 * ''Vozik'' — pen' üks'voz'ne kala.
 
-== Kaloihe sidotud vepsän muštatišed ==
+== Kaloihe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Ala kitte edel konz kalad sad.''
 * ''Ala openda kalad ujumaha.''
