*Empty MediaWiki Message*

--- a/Taivaz.mw
+++ b/Taivaz.mw
@@ -2,12 +2,12 @@
 [[Fail:SI-Sky.JPG|thumb|right|250px|Taivaz]]
 '''Taivaz''' om avaruz [[Ma]]n vai miččen-ni toižen astronomižen objektan pindan päl. Avaros znamoičendas — panoram, kudamb lagištase neciš objektaspäi [[kosmos]]hasai.
 
-== Taivhaze sidotud vepsän tärtused ==
+== Taivhaze sidodud vepsän tärtused ==
 * ''[[Taivazma]]'' — sinivauvhan mujun.
 * ''[[Taivhaline]]'' — Ülähäine.
 * ''Taivhansaub, taivhan kareguz'' — taivhad.
 
-== Taivhaze sidotud vepsän muštatišed da ozoitesed ==
+== Taivhaze sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
 * ''Eile rad taivhas, a om mas.''
