--- a/Sana.mw
+++ b/Sana.mw
@@ -7,6 +7,15 @@ Sanoiden istorine augotižlibund om erazvuitte lujas, [[etimologii]] sel'genzoit
 
 Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid eziauguižiš sanoišpäi [[vaihištontedo|leksikologijan]], [[semantik]]an, [[etimologii|etimologijan]] i [[stilistik]]an šingoteses.
 
+== Sanha sidodud vepsän muštatišed ==
+<blockquote>
+* ''Ei sur' sana sud haugoi.''
+* ''Sanal voib mez' rikta.''
+* ''Sanoišpäi leibäd ed pašta.''
+* ''Sinun sana da jumalale korvha.''
+* ''Äi sanoid, da vähä azjoid.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
