/* Meheze sidodud vepsän muštatišed */ +

--- a/Mez'.mw
+++ b/Mez'.mw
@@ -18,6 +18,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Kala ecib süvemban, a mez' paremban.''
 * ''Mez' söb, mez' sab, mehele andab Jumal.''
 * ''Mitte aig, mugoi i mez'.''
+* ''Sanal voib mez' rikta.''
 * ''Söm mehen kandišeb.''
 </blockquote>
 
