+ galerei, +hom, aktualizacii

--- a/Kivi_Obil.mw
+++ b/Kivi_Obil.mw
@@ -5,10 +5,10 @@
  | Lidnanznam text = Kivin Obil lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 41,315
- | Voz' = 2017
+ | Eläjiden lugu = 40,294
+ | Voz' = 2021
  | Pind = 48.79
- | Fail = Усадьба Зорина.JPG
+ | Fail = Фонтан г Камень-на-Оби.jpg
  | Pämez' = Jurii Trofimov<br />(keväz'ku 2017—)
  | Telefonkod = +7-38584-xx-xxx
  | Avtokod = 22
@@ -29,7 +29,19 @@ Plotinnai-raudtestancii (Obin oiktal randal, 746 rist. vl 2016) mülüb lidnanku
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 43 888 ristitud, lidnankundan — 44 648 ristitud, rajonan nell' videndest. Kaikiš suremb lidnan ristitišt oli 43..45 tuh. eläjid vozil 1992−2012 (45 300 rist. vl 2005).
 
-Professionaližen opendusen aluzkundad: Kivin profškol, pedagogine i medicinine kolledžad, agrarine tehnikum, mugažo Barnaulan i Novosibirskan üläopendusen aluzkundoiden filialad.
+Professionaližen opendusen aluzkundad: Kivin profškol, pedagogine<ref>[http://kam-pedkol.ucoz.ru/ Kivin pedagogižen kolledžan sait (''kam-pedkol.ucoz.ru'').] {{ref-ru}}</ref> i medicinine kolledžad, agrotehnine tehnikum<ref>[hhtp://agroteh.edu22.info/ Kivin agrotehnižen tehnikuman sait (''agroteh.edu22.info'').] {{ref-ru}}</ref>, mugažo Barnaulan i Novosibirskan üläopendusen aluzkundoiden filialad.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Дом купца в Камень-на-оби.jpg|Venäman Penziifondan palakund (2019, ende Zorin-torgovanan pert')
+Православная Церковь Камень-на-Оби.jpg|Kaiken Venäman ph. Tihon-patriarhan jumalanpert', vn 2019 nägu (om saudud vll 1996−2002)
+Педучилище г.Камень-на-Оби .jpg|Kivin pedagogine kolledž (2019)
+Bridge Kamen-na-Obi.jpg|Raudtesild Obiš päliči vl 2011
+Ввод в эксплуатацию моста через реку Обь на 605 км линии Омск-Алтайская.jpg|Kivi Obil-päraudtestancijan sauvuz vl 2009
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://kamenrai.ru/ Kivi Obil-lidnan da Kivin rajonan tobmuden aluzkundoiden sait (''kamenrai.ru'').] {{ref-ru}}
