*Empty MediaWiki Message*

--- a/Kivi_Obil.mw
+++ b/Kivi_Obil.mw
@@ -29,7 +29,7 @@ Plotinnai-raudtestancii (Obin oiktal randal, 746 rist. vl 2016) mülüb lidnanku
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 43 888 ristitud, lidnankundan — 44 648 ristitud, rajonan nell' videndest. Kaikiš suremb lidnan ristitišt oli 43..45 tuh. eläjid vozil 1992−2012 (45 300 rist. vl 2005).
 
-Professionaližen opendusen aluzkundad: Kivin profškol, pedagogine<ref>[http://kam-pedkol.ucoz.ru/ Kivin pedagogižen kolledžan sait (''kam-pedkol.ucoz.ru'').] {{ref-ru}}</ref> i medicinine kolledžad, agrotehnine tehnikum<ref>[hhtp://agroteh.edu22.info/ Kivin agrotehnižen tehnikuman sait (''agroteh.edu22.info'').] {{ref-ru}}</ref>, mugažo Barnaulan i Novosibirskan üläopendusen aluzkundoiden filialad.
+Professionaližen opendusen aluzkundad: Kivin profškol, pedagogine<ref>[http://kam-pedkol.ucoz.ru/ Kivin pedagogižen kolledžan sait (''kam-pedkol.ucoz.ru'').] {{ref-ru}}</ref> i medicinine kolledžad, agrotehnine tehnikum<ref>[http://agroteh.edu22.info/ Kivin agrotehnižen tehnikuman sait (''agroteh.edu22.info'').] {{ref-ru}}</ref>, mugažo Barnaulan i Novosibirskan üläopendusen aluzkundoiden filialad.
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
