--- a/Makeba_Miriam.mw
+++ b/Makeba_Miriam.mw
@@ -3,8 +3,7 @@
 | изображение = Miriam Makeba 2011.jpg
 | описание изображения = Miriam Makeba edel 2009 vot
 }}
-[[File:Miriam Makeba (1968).png|thumb|Miriam Makeba (1968)]]
-
+[[Fail:Miriam Makeba (1968).png|thumb|right|250px|Miriam Makeba (1968)]]
 '''(Zenzile) Miriam Makeba''' (mug. oli tet. kut '''Mama Afrika'''; sünd. [[4. keväz'ku]] [[1932]], [[Johannesburg]], [[Suviafrikan Tazovaldkund]] — kol. [[10. kül'mku]] [[2008]], [[Kastel' Vol'turno]], [[Italii]]) oli suviafrikalaine anglijankel'ne pajatai naine da civiližiden oiktusiden kaičii. Vn 1966 «[[Gremmi]]»-premijan laureat.
 
 == Diskografii ==
