--- a/Nekrasov_Aleksandr.mw
+++ b/Nekrasov_Aleksandr.mw
@@ -1,5 +1,7 @@
 {{Personalii}}
-'''Aleksandr Ivanovič Nekrasov (Gamsa — «Gamalaine»)''' ([[komin kel'|komin]] i [[venäkel'|venän]] kelil: ''Александр Иванович Некрасов (Гамса)''; sünd. [[30. heinku]] [[1931]], [[Gam]]-külä, [[Komin Tazovaldkund]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[komilaižed|komilaine]] kirjutai.
+'''Aleksandr Ivanovič Nekrasov (Gamsa — «Gamalaine»)''' ([[komin kel'|komin]] i [[venäkel'|venän]] kelil: ''Александр Иванович Некрасов (Гамса)''; sünd. [[30. heinku]] [[1931]], [[Gam]]-külä, [[Komin Tazovaldkund]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[komilaižed|komilaine]] kirjutai. Sädab komin i venän kelil.
+
+Mez' radoi školan opendajan hätken aigan, vedi fizikad i matematikad, oli školan direktoran. Komin Tazovaldkundan arvostadud opendai (1984). Sai Komin Tazovaldkundan arvostadud rahvahanikan arvod vl 2017.
 
 == Homaičendad ==
 <references/>
