--- a/Nekrasov_Aleksandr.mw
+++ b/Nekrasov_Aleksandr.mw
@@ -1,7 +1,9 @@
 {{Personalii}}
 '''Aleksandr Ivanovič Nekrasov (Gamsa — «Gamalaine»)''' ([[komin kel'|komin]] i [[venäkel'|venän]] kelil: ''Александр Иванович Некрасов (Гамса)''; sünd. [[30. heinku]] [[1931]], [[Gam]]-külä, [[Komin Tazovaldkund]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[komilaižed|komilaine]] kirjutai. Sädab komin i venän kelil.
 
-Mez' radoi školan opendajan hätken aigan, vedi fizikad i matematikad, oli školan direktoran. Komin Tazovaldkundan arvostadud opendai (1984). Sai Komin Tazovaldkundan arvostadud rahvahanikan arvod vl 2017.
+Mez' radoi školan opendajan, vedi fizikad i matematikad. Nekrasov om pästnus Komin Pedagogižen institutaspäi vl 1960 i oli školan direktoran kodiküläs hätken aigan vhesai 1993. Komin Tazovaldkundan arvostadud opendai (1984). Sai Komin Tazovaldkundan arvostadud rahvahanikan arvod vl 2017.
+
+Kirjutai sädi čomamahtoižen i publicistižen literaturan kirjoid. Kerazi i pästi komin pajoid da lühüdoid pajoid.
 
 == Homaičendad ==
 <references/>
