--- a/Karim_Halili.mw
+++ b/Karim_Halili.mw
@@ -2,7 +2,9 @@
 | изображение = Karim Khalili in 2010.jpg
 | описание изображения = Karim Halili vl 2010
 }}
-'''Karim Halili''' ([[dari]]: ''محمد کریم خلیلي''; sünd. [[1950. voz'|1950]], [[Vardak]]-agj, [[Afganistan]]) om ranu ühteks [[Afganistan]]an päministrišpäi (07.12.2004 — 29.09.2014, [[Fahim Mohammad|Mohammad Fahimanke]]) [[Karzai Hamid|Hamid Karzajan]] administracijas.
+'''Karim Halili''' ([[dari]]: ''محمد کریم خلیلي''; sünd. [[1950. voz'|1950]], [[Vardak]]-agj, [[Afganistan]]) om ranu ühteks [[Afganistan]]an varaprezidentoišpäi (07.12.2004 — 29.09.2014, [[Fahim Mohammad|Mohammad Fahimanke]] vspäi 2009) [[Karzai Hamid|Hamid Karzajan]] administracijas. Tegi Afganistanan varaprezidentan velgusidme vll 2002−2004.
+
+Mez' om Hizb-e vahdat islami-partijan üks' lideroišpäi. Se partii ezitab valdkundan [[hazarejalaižed|hazarejalaižiden]] vähembust.
 
 == Homaičendad ==
 <references/>
