--- a/Karim_Halili.mw
+++ b/Karim_Halili.mw
@@ -4,7 +4,10 @@
 }}
 '''Karim Halili''' ([[dari]]: ''محمد کریم خلیلي''; sünd. [[1950. voz'|1950]], [[Vardak]]-agj, [[Afganistan]]) om ranu ühteks [[Afganistan]]an varaprezidentoišpäi (07.12.2004 — 29.09.2014, [[Fahim Mohammad|Mohammad Fahimanke]] vspäi 2009) [[Karzai Hamid|Hamid Karzajan]] administracijas. Tegi Afganistanan varaprezidentan velgusidme vll 2002−2004.
 
-Mez' om Hizb-e vahdat islami-partijan üks' lideroišpäi. Se partii ezitab valdkundan [[hazarejalaižed|hazarejalaižiden]] vähembust.
+== Biografii ==
+Mez' openui religiiškoloiš laps'aigan i sirdi [[Kabul]]ha jätktamha ičeze opendust vl 1970. Ühtni Afganistanan vastustushe nevondkundaližiden vägutungendan aigan. Aigaližil 1990-nzil vozil radoi valdkundan rahaministran modžahedoiden ohjastuses.
+
+Halili om Hizb-e vahdat islami-partijan üks' lideroišpäi vspäi 1989. Se partii ezitab valdkundan [[hazarejalaižed|hazarejalaižiden]] vähembust.
 
 == Homaičendad ==
 <references/>
