*Empty MediaWiki Message*

--- a/Bangladešan_tak.mw
+++ b/Bangladešan_tak.mw
@@ -1,7 +1,7 @@
 [[Fail:Bangladeshi banknotes.jpg|thumb|right|250px|Bangladešan banknotad (2021)]]
 '''Bangladešan tak''' ({{lang-bn|বাংলাদেশী টাকা}}, ''Bangladeši taka'') om [[Bangladeš]]an valdkundvalüt. Om väges vspäi 1972, vajehti [[pakistanan rupii|pakistanan rupijad]] uden ripmatoman valdkundan territorijal.
 
-1 tak = 100 paisad (vai poišad, {{lang-bn|পয়সা}}). Valütkod om ''BDT''. Simvol: ৳ vai Tk. Valütan pästandan regulätor om Bangladešan Bank<ref>[http://bb.org.bd/ Bangladešan Bankan sait (''bb.org.bd'').] {{ref-bn}}</ref>.
+1 tak = 100 paisad (vai poišad, {{lang-bn|পয়সা}}). Valütkod om ''BDT''. Simvol: ৳ vai Tk. Valütan pästandan regulätor om Bangladešan Bank<ref>[http://bb.org.bd/ Bangladešan Bankan sait (''bb.org.bd'').] {{ref-bn}} {{ref-en}}</ref>.
 
 Nene rahuded oma pörundas: 1, 2, 5 takad, ende mugažo oliba 1, 5, 10, 25, 50 paisad. Banknotad oma nominalanke 1, 2, 5, 10, 20, 50, 100, 500, 1000 takad.
 
