--- a/.ee.mw
+++ b/.ee.mw
@@ -1,5 +1,9 @@
 '''.ee''' om [[Estinma]]n [[DNS|Internet-domen]]. Se om avaitud [[1992. voz'|1992]]-nden voden 3. päiväl kezakud.<ref>[http://iana.org/domains/root/db/ee.html IANA — .ee Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
+Voib registriruida domennimen kahtendel i koumandel tazopindoil. Kompanijad i personad valdoitas domennimel. Personale pidab olda Estinman rahvahanikudenke vai nägunke elämižhe Estinmas, toižin ka ozutada ezitajad niidenke andmusidenke.
+
+Domennimen kävutand tarbhaičeb maksmižen 22,31..92,03 evrod vodes.
+
 == Homaičendad ==
 <references />
 
