--- a/.ee.mw
+++ b/.ee.mw
@@ -2,7 +2,16 @@
 
 Voib registriruida domennimen kahtendel i koumandel tazopindoil. Kompanijad i personad valdoitas domennimel. Personale pidab olda Estinman rahvahanikudenke vai nägunke elämižhe Estinmas, toižin ka ozutada ezitajad niidenke andmusidenke.
 
-Domennimen kävutand tarbhaičeb maksmižen 22,31..92,03 evrod vodes.
+Domennimen kävutand tarbhaičeb maksmižen 22,31..92,03 evrod vodes. Vl 2017 saitan registracii maksoi 6 evrod vodes.
+
+Kahtenden tazopindan avaros levitadud domenad:
+* '''.com.ee''' — kommertižed kompanijad.
+* '''.pri.ee''' — personad.
+* '''.fie.ee''' — individualižed edheotajad.
+* '''.med.ee''' — tervhudenkaičendan aluzkundad.
+* '''.edu.ee''' — opendusen institucijad da projektad
+* '''.lib.ee''' — kirjištod.
+* '''.org.ee''' — kommertižetomad organizacijad i projektad.
 
 == Homaičendad ==
 <references />
