--- a/.dk.mw
+++ b/.dk.mw
@@ -1,7 +1,14 @@
 [[Fail:.dk hostmaster logo.png|thumb|right|200px|Domenan DK Hostmaster-registratoran logotip]]
 '''.dk''' om [[Danii|Danijan]] [[DNS|Internet-domen]]. Se om avaitud [[1987. voz'|1987]]-nden voden 14. päiväl heinkud.<ref>[http://iana.org/domains/root/db/dk.html IANA — .dk Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
-Kaik 1,346,755 domennimed oli registriruidud vn 2021 28. päiväl uhokud. Registracii om lasktud kahtendel tazopindal i ei rekomenduigoi koumandel tazopindal. Voib kävutada danijan kelen eriližid kirjamid domennimes (æ, ø, å, ö, ä, ü, é).
+Kaik 1,346,755 domennimed oli registriruidud vn 2021 28. päiväl uhokud. Vl 2016 kaik oli 504 mln lehtpolid .dk-domenas. Registracii om lasktud kahtendel tazopindal i ei rekomenduigoi koumandel tazopindal. Voib kävutada danijan kelen eriližid kirjamid domennimes (æ, ø, å, ö, ä, ü, é).
+
+Kahtenden tazopindan reglamentiruidud domenad:
+* '''.ac.dk''' — opendusen i tedon aluzkundad
+* '''.co.dk''' — kommertižed edheotandad, korporacijad
+* '''.gov.dk''' — valdkundaližed organad
+* '''.id.dk, in.dk, pp.dk''' — personad
+* '''.pro.dk''' — professionaližed organizacijad.
 
 == Homaičendad ==
 <references />
