--- a/Venan_lidnanznam.mw
+++ b/Venan_lidnanznam.mw
@@ -1,8 +1,10 @@
 [[Fail:Wien 3 Wappen.svg|right|250px]]
-'''Venan lidnanznam''' ({{lang-de|Wiener Wappen}}) om [[Avstrii|Avstrijan]] [[Ven]]-pälidnan üks' oficialižiš simvoloišpäi. Kompozicii om olmas 14. voz'sadaspäi. Nügüdläine variant vahvištadud [[1998]]-nden voden uhokul.
+'''Venan lidnanznam''' ({{lang-de|Wiener Wappen}}) om [[Avstrii|Avstrijan]] [[Ven]]-pälidnan üks' oficialižiš simvoloišpäi. Kompozicii om olmas 14. voz'sadaspäi. Nügüdläine variant om vahvištadud vn [[1998]] 12. päiväl uhokud.
 
 == Ümbrikirjutand ==
-Must üks'päine [[orl]] kuldaižidenke käpšuidenke i n'okunke. Pen' lidnanznam sijadase hänen rindhal, se om rusked laud hobedaiženke ristanke.
+Must üks'päine [[orl]] kuldaižidenke käpšuidenke i n'okunke. Pen' lidnanznam sijadase hänen rindhal, se om rusked anglijalaine somuzlaud hobedaiženke ristanke.
+
+Lidnanznaman pen' variant kogoneb somuzlaudaspäi vaiše. Ünäine variant ottas kävutamižhe tobmuden organoil.
 
 == Kacu mugažo ==
 * [[Venan flag]]
