+ galerei, +hom, aktualizacii

--- a/Novoaltaisk.mw
+++ b/Novoaltaisk.mw
@@ -5,27 +5,45 @@
  | Lidnanznam text = Novoaltaiskan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 73,439
- | Voz' = 2018
+ | Eläjiden lugu = 74,586
+ | Voz' = 2021
  | Pind = 72.2
  | Fail = Minibus in Novoaltaisk 01.JPG
- | Pämez' = Sergei Jeremejev<br />(viluku 2017—)
+ | Pämez' = Vladimir Bodunov<br />(viluku 2022—)
  | Telefonkod = +7-38532-xx-xxx
  | Avtokod = 22
  | Aigvö = [[UTC]]+7 (MSK+4)
 }}
+[[Fail:Районы Новоалтайска.png|thumb|left|250px|Novoaltaiskan administrativižed rajonad:<br/>{{legend|red|Keskuzline}} {{legend|yellow|Belojarskii}} {{legend|green|Novogorskii}}]]
 '''Novoaltaisk''' ({{lang-ru|Новоалтайск}}) om [[Venäma]]n lidn da lidnümbrik [[Altajan rand]]an pohjoižes. Se om randan nellänz' lidn eläjiden lugun mödhe, [[Barnaul]]an päivnouzmaine kaimdailidn, [[Pervomaiskojen rajonan (Altajan rand)|Pervomaiskojen rajonan]] administrativižeks keskuseks mugažo, ei mülü rajonha.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1736 kuti ''Česnokovk-külä'' ({{lang-ru|Чесноковка}}) Česnok-närituznimen mödhe, muga nimitihe joged-ki. Kätihe radnikžiloks vl 1936. Žilo sai lidnan statusad vl 1942. Udesnimitihe nügüdläižikš vl 1962. Vl 2004 lidnanvuitte Belojarsk-žilo mülüi lidnha mikrorajonaks. Lidn šingotase raudten edheotandoil ([[vagon|vagonansauvomižen]] tegim, sortiruindstancii), sauvondmaterialiden sarakol (raudbetontegesed, katuzmaterialad, špaloiden da pachiden tegim sauvomha raudteid), mugažo maidtegim radab.
+Eländpunktan aluz om pandud vl 1736 kuti ''Česnokovk-külä'' ({{lang-ru|Чесноковка}}) Česnok-närituznimen mödhe, muga nimitihe joged-ki. Kätihe radnikžiloks vl 1936. Žilo sai lidnan statusad vl 1942. Udesnimitihe nügüdläižikš vl 1962. Vl 2004 lidnanvuitte Belojarsk-žilo mülüi lidnha mikrorajonaks.
+
+Novoaltaisk šingotase raudten edheotandoil ([[vagon|vagonansauvomižen]] tegim, sortiruindstancii), sauvondmaterialiden sarakol (raudbetontegesed, katuzmaterialad, špaloiden da pachiden tegim sauvomha raudteid), mugažo maidtegim radab.
 
 == Geografijan andmused ==
 Lidn sijadase [[Ob']]-jogen oiktal randpolel, 7 kilometras jogespäi, 140 m ü.m.t. keskmäižel korktusel. Matkad [[Barnaul]]an röunhasai (Obin hura rand) om 7 km päivlaskmha avtotedme vai raudtedme.
 
-Koume žilod mülüdas lidnümbrikho Novoaltaiskan ližaks.
+Novoaltaisk om lidnümbrikon üks'jäine eländpunkt. Jagase koumeks rajonaks, kaikuččes ičeze administracii radab.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 70 437 ristitud. Kaikiš suremb ristitišt oli vll 1998−2009 i om vspäi 2016, enamba 73 tuh. eläjid (73 986 rist. vl 2005).
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 70 437 ristitud. Kaikiš suremb ristitišt om nügüd', oli vll 1998−2009 i om vspäi 2016, enamba 73 tuh. eläjid.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] nell' jumalanpertid<ref>[http://sobory.ru/geo/locat/18886 Novoaltaiskan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om avaitud lidnas.
+
+Edeline lidnan pämez' om Sergei Jeremejev (viluku 2017 — viluku 2022).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Памятник воинам Новоалтайцам.jpg|Muštnik radajile [[Sur' Tatanmaine soda|Suren sodan]] aigan (2016)
+Новоалтайск, братская могила.jpg|Pölištunuziden nevondkundaližhe tobmudehe näht partizanoiden velleskaum, vn 2016 nägu
+Novoaltaysk, Altai Krai, Russia - panoramio.jpg|Laukad äižiruižiš pertiš vl 2008
+ВЛ80С-1575 - panoramio.jpg|VL80S-serijan vedim lidnas vl 2008
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.novoaltaysk.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''novoaltaysk.ru'').] {{ref-ru}}
