--- a/Rubcovsk.mw
+++ b/Rubcovsk.mw
@@ -5,15 +5,16 @@
  | Lidnanznam text = Rubcovskan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 144,218
- | Voz' = 2018
+ | Eläjiden lugu = 139,565
+ | Voz' = 2021
  | Pind = 84
- | Fail = Rubcovsk-Lenin.jpg
+ | Fail = Рубцовск. Центр.jpg
  | Pämez' = Dmitrii Fel'dman<br />(uhoku 2017—)
  | Telefonkod = +7-38557-xx-xxx
  | Avtokod = 22
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
+[[Fail:MapOfRubtsovsk.png|thumb|left|250px|Lidn ümbrištonke, vn 2018 kart]]
 '''Rubcovsk''' ({{lang-ru|Рубцовск}}) om [[Venäma]]n lidn da lidnümbrik [[Sibir'|Sibirin]] suves, [[Altajan rand]]an suvipäivlaskmas. Se om [[Rubcovskan rajon]]an administrativine keskuz mugažo (ei ole rajonan palaks).
 
 == Istorii ==
@@ -33,6 +34,20 @@ Professionaližen opendusen aluzkundad: Rubcovskan agrariž-tegimištoline tehni
 
 == Transport ==
 Avtobusad, trolleibusad, maršruttaksid da taksid oma kundaližtransportaks lidnas. Ühtennimine raudtestancii om «[[Barnaul]] — [[Semei]]»-raudtekeskustal.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Rubcovsk-Admin.jpg|Lidnan Ezitajiden nevondkundan i Administracijan sauvuz (2011)
+Rubcovsk-Voc3.jpg|Sodamemorial päraudtestancijanno (2011)
+Mihaylo-Arhangelskaya-tserkov.jpg|Ph. Mikoiarhangelan jumalanpert', vn 2013 nägu (om pühästadud eziauguižešti vl 1906)
+Viaduct - panoramio (4).jpg|Tegimištoline zon vl 2009
+Rubcovsk-Bank.jpg|«Sberbank:an» sauvuz lidnas vl 2011
+Rubcovsk-Maria-Ra.jpg|«Marija-Ra»-kompanijan torguindkeskuz vl 2011
+Рубцовск, театр.jpg|Rubcovskan dramteatr (2020)
+Rubcovsk-Swim.jpg|Ujundbassein (2011)
+Rubcovsk-Depo.jpg|Raudtedepo vl 2011
+Рубцовск. У жд вокзала..jpg|Rubcovskan päraudtestancijan sauvuz vl 2012
+</gallery>
 
 == Irdkosketused ==
 * [http://gorsovet.rubtsovsk.ru/ Lidnan Ezitajiden nevondkundan oficialine sait (''gorsovet.rubtsovsk.ru'').] {{ref-ru}}
