--- a/Mez'.mw
+++ b/Mez'.mw
@@ -16,6 +16,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Ak da lehm, mužik da hebo.''
 * ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
 * ''Kala ecib süvemban, a mez' paremban.''
+* ''Küläd eile koiratomad, mad eile mehetomad.''
 * ''Mez' ei völ koliške, a kutjal söttas.''
 * ''Mez' söb, mez' sab, mehele andab Jumal.''
 * ''Mitte aig, mugoi i mez'.''
