/* Ristithu sidodud vepsän muštatišed */ +

--- a/Ristit.mw
+++ b/Ristit.mw
@@ -25,6 +25,7 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 * ''Hebod taganpäi, koirad edespäi, ristitud kaikiš polišpäi tarbiž varaita.''
 * ''Järed da äred, pen' da mahtav.''
 * ''Kana eile lind, ak eile ristit.''
+* ''Ni küläs kündai, ni lidnas lendai.'' (ristitun polhe)
 * ''Pen' da tark, sur' da šläbäk.''
 * ''Ristit koleb, a živat kadob.''
 </blockquote>
