--- a/Jumal.mw
+++ b/Jumal.mw
@@ -6,7 +6,7 @@
 
 Kaiked mail'madme 60..90% täuz'igäšt ristitištod uskotas Jumalha.
 
-== Jumalha sidotud vepsän muštatišed<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lp. 38. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref> ==
+== Jumalha sidodud vepsän muštatišed<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lp. 38. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref> ==
 <blockquote>
 * ''Andoi jumal sun, andab sömäd-ki.''
 * ''Jumal ei käske edelpäi teta.''
@@ -14,6 +14,7 @@ Kaiked mail'madme 60..90% täuz'igäšt ristitištod uskotas Jumalha.
 * ''Jumalata ala mäne nikuna.''
 * ''Kaite, i Jumal kaičeb.''
 * ''Kuna Jumal ozuti, sihe koled-ki.''
+* ''Laud om jumalan kämen'.''
 * ''Mehed manitad, a Jumalan ed manita.''
 * ''Mehel om mela kädes, a Jumal venehen veb.''
 * ''Mez' magadab, a Jumal varjoičeb.''
