--- a/Jumal.mw
+++ b/Jumal.mw
@@ -30,7 +30,7 @@ Kaiked mail'madme 60..90% täuz'igäšt ristitištod uskotas Jumalha.
 * [[Deizm]]
 * [[Jumalantedo]]
 * [[Mail'mheng]]
-* [[Jumalan olendan kuzund]]
+* [[Jumalan olendan küzund]]
 * [[Metafizik]]
 
 == Homaičendad ==
