--- a/Klimatan_toižetamine.mw
+++ b/Klimatan_toižetamine.mw
@@ -1,7 +1,7 @@
 {{1000}}{{A10000}}
 [[Fail:Temperature reconstruction last two millennia.svg|thumb|right|250px|Il'man lämuden rindatuz kahtes voz'tuhas, voziden 1850−1900 keskmäine lämuz om ottud rindatusen aluseks]]
 [[Fail:2000 Year Temperature Comparison.png|thumb|right|250px|Il'man mapindanno lämuden rindatuz kahtes voz'tuhas — enamba detalizuidud grafik]]
-'''Klimatan toižetamine''' vai '''Nügüdläine globaline lämšund''' om Man pindšoidun keskmäižen lämuden ližaduz. [[Valdmeri]] akkumuliruib 90% lämšundad.
+'''Klimatan toižetamine''' vai '''nügüdläine globaline lämšund''' om Man pindšoidun keskmäižen lämuden ližaduz. [[Valdmeri]] akkumuliruib 90% lämšundad.
 
 Il'man keskmäine lämuz ližadui 0,74 C° 20. voz'sadan augotišespäi, sidä kesken kaks' koumandest ližaduses tegihe jäl'ghe 1980 vot. Vodespäi 1850 kaikutte voz'kümne oli lämhemb mi edeline voz'kümne.
 
